--- a/HesoyamHospital/IntegrationAdapter/Dockerfile
+++ b/HesoyamHospital/IntegrationAdapter/Dockerfile
@@ -2,11 +2,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS integration-build
 
 WORKDIR /app/IntegrationAdapter
 
-COPY IntegrationAdapter.csproj .
+COPY ./IntegrationAdapter/IntegrationAdapter.csproj .
 
 WORKDIR /app/Backend
 
-COPY ../Backend/Backend.csproj .
+COPY ./Backend/Backend.csproj .
 
 WORKDIR /app/IntegrationAdapter
 
@@ -14,8 +14,8 @@ RUN dotnet restore IntegrationAdapter.csproj
 
 WORKDIR /app/IntegrationAdapter
 
-COPY . .
+COPY ./IntegrationAdapter/. .
 
 WORKDIR /app/Backend
 
-COPY ../Backend/. .
+COPY ./Backend/. .
