--- a/HesoyamHospital/WebApplication/Dockerfile
+++ b/HesoyamHospital/WebApplication/Dockerfile
@@ -2,11 +2,11 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS web-build
 
 WORKDIR /app/WebApplication
 
-COPY WebApplication.csproj .
+COPY ./WebApplication/WebApplication.csproj .
 
 WORKDIR /app/Backend
 
-COPY ../Backend/Backend.csproj .
+COPY ./Backend/Backend.csproj .
 
 WORKDIR /app/WebApplication
 
@@ -14,8 +14,8 @@ RUN dotnet restore WebApplication.csproj
 
 WORKDIR /app/WebApplication
 
-COPY . .
+COPY ./WebApplication/. .
 
 WORKDIR /app/Backend
 
-COPY ../Backend/. .
+COPY ./Backend/. .
