--- a/HesoyamHospital/docker-compose.yml
+++ b/HesoyamHospital/docker-compose.yml
@@ -45,6 +45,8 @@ services:
       context: ./web-application-front 
       dockerfile: Dockerfile
     image: gregvader/webapplication:latest
+    depends_on:
+      - WebApplicationTests
 
   IntegrationAdapterTests:
     build:
