--- a/HesoyamHospital/WebApplication/Dockerfile
+++ b/HesoyamHospital/WebApplication/Dockerfile
@@ -19,3 +19,21 @@ COPY ./WebApplication/. .
 WORKDIR /app/Backend
 
 COPY ./Backend/. .
+
+WORKDIR /app/WebApplication
+
+RUN dotnet publish WebApplication.csproj -c Release -o out
+
+FROM mcr.microsoft.com/dotnet/core/aspnet:3.1.5
+
+WORKDIR /app
+
+COPY --from=web-build /app/WebApplication/out .
+
+EXPOSE 80
+
+#RUN useradd -u 1000 john
+
+#USER john
+
+ENTRYPOINT ["dotnet", "Backend.dll"]
