--- a/HesoyamHospital/WebApplication/Dockerfile
+++ b/HesoyamHospital/WebApplication/Dockerfile
@@ -2,18 +2,6 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS web-build
 
 WORKDIR /app/WebApplication
 
-COPY ./WebApplication/WebApplication.csproj .
-
-WORKDIR /app/Backend
-
-COPY ./Backend/Backend.csproj .
-
-WORKDIR /app/WebApplication
-
-RUN dotnet restore WebApplication.csproj
-
-WORKDIR /app/WebApplication
-
 COPY ./WebApplication/. .
 
 WORKDIR /app/Backend
@@ -22,7 +10,14 @@ COPY ./Backend/. .
 
 WORKDIR /app/WebApplication
 
+RUN dotnet build WebApplication.csproj
+
+WORKDIR /app/WebApplication
+
 RUN dotnet publish WebApplication.csproj -c Release -o out
+
+
+
 
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1.5
 
@@ -30,7 +25,7 @@ WORKDIR /app
 
 COPY --from=web-build /app/WebApplication/out .
 
-EXPOSE 80
+EXPOSE 5000
 
 #RUN useradd -u 1000 john
 
