--- a/HesoyamHospital/WebApplication/Dockerfile
+++ b/HesoyamHospital/WebApplication/Dockerfile
@@ -1,34 +1,17 @@
-FROM mcr.microsoft.com/dotnet/core/sdk:3.1-alpine AS web-build
-
-WORKDIR /app/WebApplication
-
-COPY ./WebApplication/. .
-
-WORKDIR /app/Backend
-
-COPY ./Backend/. .
-
-WORKDIR /app/WebApplication
-
-RUN dotnet build WebApplication.csproj
-
-WORKDIR /app/WebApplication
-
-RUN dotnet publish WebApplication.csproj -c Release -o out
-
-
-
-
 FROM mcr.microsoft.com/dotnet/core/aspnet:3.1.5
+
+# RUN groupadd -g 1024 appuser && \
+#     useradd -r -u 1024 -g appuser appuser
+
+# USER appuser
 
 WORKDIR /app
 
-COPY --from=web-build /app/WebApplication/out .
+COPY ./WebApplication/bin/Release/netcoreapp3.1/ .
+COPY ./WebApplication .
 
-EXPOSE 5000
+EXPOSE 80
 
-#RUN useradd -u 1000 john
 
-#USER john
 
 ENTRYPOINT ["dotnet", "WebApplication.dll"]
